--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
 <h1>meow</h1>
+<h2>Marco Chavz hate page</h2>
+<body>
+    <p>Why Marco is gay</p>
+<ul>He's short</ul>
+<ul>He's jewish</ul>
+<ul>I said so</ul>
+</body>
