create new javascript file and link it

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<h1>Cole's Capstone Project</h1>
-<h2>Marco Chavz hate page</h2>
+    <h1>Cole's Capstone Project</h1>
+    <h2>Marco Chavz hate page</h2>
 <body>
     <p>Why Marco is gay</p>
-<ul>He's short</ul>
-<ul>He's jewish</ul>
-<ul>I said so</ul>
+    <ul>He's short</ul>
+    <ul>He smells bad</ul>
+    <ul>I said so</ul>
+    <ul>He plays soccer</ul>
+    <ul>He sounds funny</ul>
+    <ul>He's homeless</ul>
+
+    <script src="index.js"></script
 </body>
