Before the python file was deleted

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
-    <h1>Cole's Capstone Project</h1>
-    <h2>Marco Chavz hate page</h2>
-<body>
-    <p>Why Marco is gay</p>
-    <ul>He's short</ul>
-    <ul>He smells bad</ul>
-    <ul>I said so</ul>
-    <ul>He plays soccer</ul>
-    <ul>He sounds funny</ul>
-    <ul>He's homeless</ul>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Coles capstone</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+<h1>Coles capstone (beta)</h1>
+<p></p>
 
-    <script src="index.js"></script
-</body>
+//This links the index.js file to this html file.
+	<script src="index.js"></script>
+  </body>
+</html>
