--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1>Coles capstone (beta)</h1>
 <p></p>
 
-//This links the index.js file to this html file.
+    <!--This links the index.js file to this html file.-->
 	<script src="index.js"></script>
   </body>
 </html>
