--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Coles capstone</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-<h1>Coles capstone (beta)</h1>
-<p></p>
+    <title>Coles capstone project</title>
+</head>
+<body>
+    <div id="result"></div>
+        <script>
+        // Function to make the request and update the result div
+        function makeRequest() {
+            fetch('www.themealdb.com/api/json/v1/1/filter.php?i=chicken_breast')
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    // Update the result div with the data
+                    document.getElementById('result').textContent = JSON.stringify(data);
+                })
+                .catch(error => {
+                    // Handle errors
+                    console.error('There was a problem with the request:', error);
+                });
+        }
 
-    <!--This links the index.js file to this html file.-->
-	<script src="index.js"></script>
-  </body>
+        // Call the function when the page loads
+        window.addEventListener('load', makeRequest);
+    </script>
+     
+<!--This links the index.js file to this html file.-->
+<script src="index.js"></script>
+</body>
 </html>
