added searchbar and button

--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <title>Coles capstone project</title>
 </head>
 <body>
+    <div class="search-wrapper">
+    <label for="search">Search for your ingrediants</label>
+    <input type="search" id="users">
+</div>
+    <div class="ingrediants"></div>
+
     <div id="result"></div>
-    
+
+<!--this makes a bottun that says I hate this button on it-->
+<button id="button" onclick="kms()">Enter</button>
+
     <!--This links the index.js file to this html file.-->
     <script src="index.js"></script>
 </body>
