--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Coles capstone project</title>
 </head>
 <body>
@@ -10,7 +11,13 @@
     <label for="search">Search for your ingrediants</label>
     <input type="search" id="users">
 </div>
-    <div class="ingrediants"></div>
+    <div class="ingrediants list">
+        <div class="ingrediants">
+            <div class="header">Water</div>
+
+
+
+    </div>
 
     <div id="result"></div>
 
