--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div class="search-wrapper">
+        <a href="recepieView.html"><h1>meow</h1></a>
     <label for="search">Search for your ingrediants</label>
-    <input type="search" id="users">
+    <input type="search" id="ingredients-search">
 </div>
     <div class="ingrediants list">
         <div class="ingrediants">
@@ -21,8 +22,8 @@
 
     <div id="result"></div>
 
-<!--this makes a bottun that says I hate this button on it-->
-<button id="button" onclick="kms()">Enter</button>
+    <!--this makes a bottun that says I hate this button on it-->
+    <button id="button" onclick="kms()">Enter</button>
 
     <!--This links the index.js file to this html file.-->
     <script src="index.js"></script>
