--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="search-wrapper">
-        <a href="recepieView.html"><h1>meow</h1></a>
+        <a href="recepieView.html"><h1></h1></a>
     <label for="search">Search for your ingrediants</label>
     <input type="search" id="ingredients-search">
 </div>
